--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/banner-1.png" class="d-block w-100" alt="...">
+                    <img src="images/banner-1.png" class="d-block medium" alt="...">
                     <div class="carousel-caption d-md-block">
                       <h3 class="fw-bold">Welcome To San Diego Convention Center</h3>
                       <p>The San Diego Convention Center is the primary convention center in San Diego, California. It is located in the Marina district of downtown San Diego near the Gaslamp Quarter, at 111 West Harbor Drive.</p>
@@ -68,7 +68,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="images/banner-2.png" class="d-block w-100" alt="...">
+                    <img src="images/banner-2.png" class="d-block medium" alt="...">
                     <div class="carousel-caption d-md-block">
                       <h3 class="fw-bold">The perfect venue for your next event</h3>
                       <p>Beaches, museums, attractions, parks, recreation, nightlife and much more are located just steps from the Convention Center.</p>
@@ -76,7 +76,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="images/banner-3.png" class="d-block w-100" alt="...">
+                    <img src="images/banner-3.png" class="d-block medium" alt="...">
                     <div class="carousel-caption  d-md-block">
                       <h3 class="fw-bold">Clean, spacious and full of sunshine.</h3>
                       <p>With high vaccination rates and industry-leading protocols, we are ready to host you here on the San Diego Bay.</p>
@@ -84,7 +84,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="images/banner-4.png" class="d-block w-100" alt="...">
+                    <img src="images/banner-4.png" class="d-block medium" alt="...">
                     <div class="carousel-caption  d-md-block">
                       <h3 class="fw-bold">Eat & Drink</h3>
                       <p>From world-class dining to fresh local cuisine, like the famous fish taco, and a thriving craft beer scene, San Diego is a dynamic foodie city.</p>
