--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             <div class="order-md-1 order-2">
                 <small style="font-size: 14px;" class="text-white">© 2022 salekinnabil. All rights reserved</small>
                 <div class="social-media mt-3">
-                    <a href="https://www.instagram.com/sah75fc/?hl=en" class="icon"><i class="ms-4 fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/salekinnabil/" class="icon"><i class="ms-4 fab fa-instagram"></i></a>
                     <a href="https://www.facebook.com/salekinnabil007" class="icon"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://www.linkedin.com/in/shirajus-salekin-nabil-446b0a211/" class="icon"><i class="fab fa-linkedin-in"></i></a>
                     <a href="" class="icon"><i class="fab fa-twitter"></i></a>
